--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ section{
     display: flex;
     align-items: center;
     /* padding: 0 9%; */
-     background: url(4.jpg)no-repeat;
+     background: url(/img/4.jpg)no-repeat;
     background-size: cover;
     background-position: center; 
     
@@ -1058,10 +1058,30 @@ span{
 
 @media(max-width:376px){
 
+    body{
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+    }
+    
+
+
+    .header{
+
+        width: 325px;
+    }
+    .home{
+        width: 325px
+    }
+    
+    
     .home{
         justify-content: center;
     }
     .home-content{
+        width: 325px;
         display: flex;
         align-items: center;
         flex-direction: column;
@@ -1069,12 +1089,56 @@ span{
     }
 
     .home-content h1{
-        font-size: 39px;
+        font-size: 31px;
 
+    }
+    .home-content h3,.text-animate{
+        width: 400px;
     }
     .home-content .text-animate h3{
         font-size: 25px;
     }
+    
+    
+    .home .home-content p{
+        width: 300px;
+        font-size: 11px;
+    }
+    .home .home-content .btn-box{
+
+        width: 300px;
+        font-size: small;
+
+    }
+    .btn-box .btn{
+
+        width: 120px;
+        height: 50px;
+        font-size: 13px;
+    }
+
+    .home-sci{
+
+        bottom: -30px;
+        left: 80px;
+
+    }
+
+    .about-content{
+
+        width: 325px
+    }
+    .about-content p{
+
+        width: 300px;
+    }
+    .education,.skills,.contact{
+
+        width: 325px;
+
+    }
+
+    
 
 }
 
