--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ section{
     -webkit-text-stroke: .7px var(--main-color);
     background-image: linear-gradient(var(--main-color),var(--main-color));
     background-repeat: no-repeat;
-    /* -webkit-background-clip: text; */
+    -webkit-background-clip: text; 
     background-position: 0 0;
     animation: homeanimation1 6s linear infinite;
     animation-delay: 2s;
