--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
     --second-bg-color: #112e42;
     --text-color: #ededed;
     --main-color: #00abf0;
+    --text2-color: rgb(8, 196, 187);
 
 
 }
@@ -64,6 +65,9 @@ body{
     
 
 
+}
+.num{
+    color: var(--main-color);
 }
 
 .logo{
@@ -176,6 +180,8 @@ section{
     background-position: 0 0;
     animation: homeanimation1 6s linear infinite;
     animation-delay: 2s;
+    /* border: 2px solid red; */
+    width: 450px;
     
 }
 
@@ -558,6 +564,11 @@ span{
     color: transparent;
     -webkit-text-stroke: .7px var(--text-color);
 }
+.clg{
+    color: transparent;
+    -webkit-text-stroke: .7px var(--text2-color);
+}
+
 
 .education-content .content p{
 
@@ -902,7 +913,7 @@ span{
 
  .animate.home-img{
 
-    width: 50%;
+    width: 100%;
     height:1000px;
 
  }
@@ -1198,7 +1209,7 @@ span{
 @keyframes homeanimation1 {
 
     0%,10%,100%{
-        background-position: -400px 0;
+        background-position: -450px 0;
     }
 
     65%,85%{
@@ -1212,12 +1223,12 @@ span{
         width: 0;
     }
 
-    65%,78%,85%{
-        width: 100%;
+    65%,78%,95%{
+        width: 420px;
         opacity: 1;
 
     }
-    75%,81%{
+    75%,91%{
         opacity: 0;
     }
 }
